3.1/_sources/_tags/Python.rst.txt
Tag: Python
###########

.. toctree::
    :maxdepth: 1
    :caption: Examples with this tag:

    ../examples/python/kinetics/blowers_masel.rst
    ../examples/python/kinetics/custom_reactions.rst
    ../examples/python/kinetics/diamond_cvd.rst
    ../examples/python/kinetics/extract_submechanism.rst
    ../examples/python/kinetics/interactive_path_diagram.rst
    ../examples/python/kinetics/lithium_ion_battery.rst
    ../examples/python/kinetics/mechanism_reduction.rst
    ../examples/python/kinetics/reaction_path.rst
    ../examples/python/kinetics/shock_tube.rst
    ../examples/python/kinetics/sofc.rst
    ../examples/python/onedim/adiabatic_flame.rst
    ../examples/python/onedim/burner_flame.rst
    ../examples/python/onedim/catalytic_combustion.rst
    ../examples/python/onedim/diffusion_flame.rst
    ../examples/python/onedim/diffusion_flame_batch.rst
    ../examples/python/onedim/diffusion_flame_continuation.rst
    ../examples/python/onedim/diffusion_flame_extinction.rst
    ../examples/python/onedim/flame_fixed_T.rst
    ../examples/python/onedim/flame_initial_guess.rst
    ../examples/python/onedim/flame_speed_convergence_analysis.rst
    ../examples/python/onedim/flamespeed_sensitivity.rst
    ../examples/python/onedim/ion_burner_flame.rst
    ../examples/python/onedim/ion_free_flame.rst
    ../examples/python/onedim/premixed_counterflow_flame.rst
    ../examples/python/onedim/premixed_counterflow_twin_flame.rst
    ../examples/python/onedim/stagnation_flame.rst
    ../examples/python/reactors/1D_packed_bed.rst
    ../examples/python/reactors/1D_pfr_surfchem.rst
    ../examples/python/reactors/NonIdealShockTube.rst
    ../examples/python/reactors/PorousMediaBurner.rst
    ../examples/python/reactors/combustor.rst
    ../examples/python/reactors/continuous_reactor.rst
    ../examples/python/reactors/custom.rst
    ../examples/python/reactors/custom2.rst
    ../examples/python/reactors/fuel_injection.rst
    ../examples/python/reactors/ic_engine.rst
    ../examples/python/reactors/mix1.rst
    ../examples/python/reactors/periodic_cstr.rst
    ../examples/python/reactors/pfr.rst
    ../examples/python/reactors/piston.rst
    ../examples/python/reactors/plasma.rst
    ../examples/python/reactors/preconditioned_integration.rst
    ../examples/python/reactors/reactor1.rst
    ../examples/python/reactors/sensitivity1.rst
    ../examples/python/reactors/surf_pfr.rst
    ../examples/python/reactors/surf_pfr_chain.rst
    ../examples/python/thermo/adiabatic.rst
    ../examples/python/thermo/coverage_dependent_surf.rst
    ../examples/python/thermo/critical_properties.rst
    ../examples/python/thermo/equations_of_state.rst
    ../examples/python/thermo/equivalenceRatio.rst
    ../examples/python/thermo/isentropic.rst
    ../examples/python/thermo/isentropic_units.rst
    ../examples/python/thermo/mixing.rst
    ../examples/python/thermo/plasma_equilibrium.rst
    ../examples/python/thermo/rankine.rst
    ../examples/python/thermo/rankine_units.rst
    ../examples/python/thermo/sound_speed.rst
    ../examples/python/thermo/sound_speed_units.rst
    ../examples/python/thermo/vapordome.rst
    ../examples/python/transport/dusty_gas.rst
    ../examples/python/transport/multiprocessing_viscosity.rst
